[package]
name = "zombierun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
eframe = "0.20.1"
egui = "0.20.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_kdl = "0.1.0"
tracing-subscriber = "0.3.16"
windows = { version = "0.44.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
